--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.8.5</version>
 	</dependency>
+	<dependency>
+        <groupId>org.antlr</groupId>
+        <artifactId>antlr4</artifactId>
+        <version>4.7.2</version>
+    </dependency>
 	
   </dependencies>
   <build>
