--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
         <artifactId>antlr4</artifactId>
         <version>4.7.2</version>
     </dependency>
+    <dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.3.1</version>
+	</dependency>
 	
   </dependencies>
   <build>
