--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 	    <artifactId>commons-fileupload</artifactId>
 	    <version>1.3.1</version>
 	</dependency>
+	<!-- zip / unzip files -->
+	<dependency>
+	    <groupId>net.lingala.zip4j</groupId>
+	    <artifactId>zip4j</artifactId>
+	    <version>2.2.1</version>
+	</dependency>
 	
   </dependencies>
   <build>
