--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 	    <artifactId>zip4j</artifactId>
 	    <version>2.2.1</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.4.1</version>
+	</dependency>
 	
   </dependencies>
   <build>
