--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
 
 	<!-- Package as an executable jar -->
 	<build>
+		<finalName>VariaMosServices</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
